# Elasticsearch-document-searcher

./: .gitignore  Dockerfile  README.md  check.py  cmd.py  docs.json  pyproject.toml  res.json
common/config/: conf.py
common/exceptions/: __init__.py  exc.py
common/logger/: __init__.py  setup.py
data/: posts.csv  posts.json
internal/: cmd.py  handlers.py
internal/elastic/: __init__.py  client.py  elasticsearch_manager.py
internal/posts/: dao.py  orm_models.py  schemas.py
internal/storage/: __init__.py  postgres_client.py
internal/utils/: __init__.py  create_tables.py  csv_to_json.py  populate_db.py
project/: docker-compose.yaml
